--- a/index.html
+++ b/index.html
@@ -8,8 +8,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Temp</h1>
-    <h2>Test</h2>
-    
+    <section class="layout">
+        <div class="sidebar">
+            <div class="odin-banner">
+                <img class="odin-logo" src="content/odin-lined.png" alt="Odin logo">
+                <div class="odin-text">ODIN</div>
+            </div>
+        </div>
+        <div class="body">2</div>
+    </section>
 </body>
 </html>
