Complete general layout

--- a/index.html
+++ b/index.html
@@ -15,7 +15,41 @@
                 <div class="odin-text">ODIN</div>
             </div>
         </div>
-        <div class="body">2</div>
+        <div class="body">
+            <div class="section section-top">
+                <p class="standard-text">This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. Sign up <em>now</em> to get started.</p>
+                <p class="standard-text">You <em>know</em> you want to.</p>
+            </div>
+            <div class="section section-mid">
+                <p class="standard-text">Let's do this!</p>
+                <div class="inputs">
+                    <div class="input-col col-1">
+                        <label for="first-name">FIRST NAME</label>
+                        <input type="text" id="first-name" name="first-name">
+
+                        <label for="email">EMAIL</label>
+                        <input type="email" id="email" name="email">
+
+                        <label for="password">PASSWORD</label>
+                        <input type="password" id="password" name="password">
+                    </div>
+                    <div class="input-col col-2">
+                        <label for="last-name">LAST NAME</label>
+                        <input type="text" id="first-name" name="first-name">
+
+                        <label for="phone-number">PHONE NUMBER</label>
+                        <input type="tel" id="phone-number" name="phone-number">
+
+                        <label for="confirm-password">CONFIRM PASSWORD</label>
+                        <input type="password" id="confirm-password" name="confirm-password">
+                    </div>
+                </div>
+            </div>
+            <div class="section section-bottom">
+                <button>Create Account</button>
+                <p>Already have an account? Log in</p>
+            </div>
+        </div>
     </section>
 </body>
 </html>
